2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py: support updates for single modules.

	* gnome-modules.xml.in: Added xkeyboard-config for testing.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (get_stats_for): Sort by supportedness, then 
	language.

	* translation-teams.xml.in: Update.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* defaults.py (database_connection): switch to MySQL.

	* database.py (ArchivedStatistics, ArchivedInformation): 
	copy&paste from Statistics, Information tables (MySQL can't 
	handle redefinitions of column names.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (get_stats_for): 
	* update-stats.py: 
	Move to teams.TranslationLanguages() from database.Language.

	* teams.py: Added teams and language XML database.
	* database.py: Remove Language database.
	* translation-teams.xml.in: Imported teams database.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.update_stats_database): Added
	(works with both generic databases and archives).
	(LocStatistics.ui_l10n_stats): Switch to update_stats_database.
	(LocStatistics.doc_l10n_stats): Switch to update_stats_database.

	* database.py (__connection__): Add "ArchivedInformation" and
	"ArchivedStatistics" tables.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* view-module.py (get_stats_for): Set "updated" field for POT file.

	* templates/show-stats.tmpl: Show last update of POT file.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Added webpage support.
	(XmlModules.getElementText): Fix to output only direct descendants.

	* gnome-modules.xml.in: Some updates.

	* data/webpage.png: Added.
	* templates/show-stats.tmpl: Added.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* data/main.css: 
	* templates/module.tmpl: Prettyfying.

2006-03-07  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Added.
	* releases.xml.in: Added.
