@@ -1,0 +1,28 @@
+<html>
+<head><title>Damned Lies about GNOME modules</title>
+  <link rel="stylesheet" href="${webroot}/data/main.css"/>
+</head>
+<body>
+
+<center>
+<div style="width:80%; text-align: left;">
+
+<h1>Damned Lies about GNOME modules</h1>
+
+#if len($modules)
+<p>Select a module below to see some of the damned lies about it:</p>
+
+<ul>
+#for modid, module in $modules.items()
+<li><a href="${webroot}/module/${modid}">${module.description}</a></li>
+#end for
+</ul>
+#else
+<p>There are currently no modules for which I am gathering damned lies for. Poke <a href="danilo@gnome.org">Danilo</a> about it!</p>
+#end if
+
+
+</div>
+</center>
+</body>
+</html>
