@@ -1,5 +1,10 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* view-module.py (go_go): List modules when none is selected.
+	* templates/list-modules.tmpl: Added.
+
+2006-03-08  Danilo Šegan  <danilo@gnome.org>
+
 	* update-stats.py: support updates for single modules.
 
 	* gnome-modules.xml.in: Added xkeyboard-config for testing.
